# NRD

./: .gitignore  README.md
Gateway_LoRa_Mesh_v1_8_0/: CMakeLists.txt  nrf52840dongle_nrf52840.overlay  prj.conf
Gateway_LoRa_Mesh_v1_8_0/doc/: Abluaf_AT_Commands.txt  SIMCOM_SEND_STATUS_SMS.txt
Gateway_LoRa_Mesh_v1_8_0/src/: main.c
Gateway_Mesh_LoRa_div/: CMakeLists.txt  Kconfig  prj.conf
Gateway_Mesh_LoRa_div/src/: main.c
LightSwitch_RemoteControl_v1_8_0/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  prj.conf  prj_nrf52840dk_nrf52840.conf  prj_nrf52840dongle_nrf52840.conf  skb501_nrf52840.overlay
LightSwitch_RemoteControl_v1_8_0/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
LightSwitch_RemoteControl_v1_8_0/build_1/Kconfig/: Kconfig.shield.defconfig
LightSwitch_RemoteControl_v1_8_0/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  nrf52840dk_nrf52840.dts.pre.d  nrf52840dk_nrf52840.dts.pre.tmp  zephyr.dts  zephyr.hex  zephyr.map  zephyr.stat  zephyr_prebuilt.map
LightSwitch_RemoteControl_v1_8_0/build_2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
LightSwitch_RemoteControl_v1_8_0/build_2/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd  linker_zephyr_prebuilt.cmd.dep  nrf52840dongle_nrf52840.dts.pre.d  nrf52840dongle_nrf52840.dts.pre.tmp  runners.yaml  zephyr.dts  zephyr.hex  zephyr.map  zephyr.stat  zephyr_prebuilt.map
LightSwitch_RemoteControl_v1_8_0/src/: main.c  main_before cleaning.c  main_old.c
Mesh_Sensor_Client_div_v1_5_0/: CMakeLists.txt  Dongle_USB_flash.cmd  nrf52840dongle_nrf52840.overlay  prj.conf
Mesh_Sensor_Client_div_v1_5_0/include/: bm_blemesh.h  bm_blemesh_model_handler.h  bm_lora.h  bm_simple_buttons_and_leds.h
Mesh_Sensor_Client_div_v1_5_0/src/: bm_blemesh.c  bm_blemesh_model_handler.c  bm_lora.c  main.c  model_handler.c
Mesh_Sensor_Client_div_v1_5_0/szl/: CMakeLists.txt
Mesh_Sensor_Client_div_v1_5_0/szl/LEB128/: CMakeLists.txt  Kconfig  szl_leb128.c
Mesh_Sensor_Client_div_v1_5_0/szl/influxdb/: CMakeLists.txt  szl_influxdb.c
Mesh_Sensor_Client_div_v1_5_0/szl/uart/: szl_uart.c  szl_uart.h
Mesh_Sensor_Client_div_v1_5_0/szl/usb_cdc_acm/: CMakeLists.txt  Kconfig  szl_usb_cdc_acm.c
SmartMeter_LG450e_v1_7_0_old/: CMakeLists.txt  Dongle_USB_flash.cmd  prj.conf
SmartMeter_LG450e_v1_7_0_old/dlms/include/: GXCipher.h  GXDLMSAutoAnswer.h  GXDLMSCertificateInfo.h  GXDLMSDemandRegister.h  GXDLMSGPRSSetup.h  GXDLMSIec8802LlcType3Setup.h  GXDLMSIecTwistedPairSetup.h  GXDLMSMacAddressSetup.h  GXDLMSMessageHandler.h  GXDLMSNotify.h  GXDLMSPlcMeterInfo.h  GXDLMSPrimeNbOfdmPlcPhysicalLayerCounters.h  GXDLMSQualityOfService.h  GXDLMSSFSKReportingSystemList.h  GXDLMSSecureServer.h  GXDLMSSettings.h  GXDLMSTokenGateway.h  GXDLMSTranslator.h  GXHelpers.h  GXStandardObisCode.h  OBiscodes.h  TranslatorSimpleTags.h
SmartMeter_LG450e_v1_7_0_old/dlms/src/: GXAPDU.cpp  GXCommodity.cpp  GXDLMSClient.cpp  GXDLMSData.cpp  GXDLMSDisconnectControl.cpp  GXDLMSExtendedRegister.cpp  GXDLMSGPRSSetup.cpp  GXDLMSHdlcSetup.cpp  GXDLMSImageTransfer.cpp  GXDLMSMBusClient.cpp  GXDLMSMBusMasterPortSetup.cpp  GXDLMSMd5.cpp  GXDLMSObject.cpp  GXDLMSPrimeNbOfdmPlcMacCounters.cpp  GXDLMSPrimeNbOfdmPlcMacSetup.cpp  GXDLMSRegisterActivation.cpp  GXDLMSSNCommandHandler.cpp  GXDLMSSapAssignment.cpp  GXDLMSScriptTable.cpp  GXDLMSSha256.cpp  GXDLMSSpecialDaysTable.cpp  GXXmlReader.cpp  GXXmlWriter.cpp
SmartMeter_LG450e_v1_7_0_old/include/: bm_sponge.h  sz_dlms_push_parser_lg450.h
SmartMeter_LG450e_v1_7_0_old/src/: main.c
SmartMeter_LG450e_v1_8_0/: CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  prj.conf  prj_nrf52840dk_nrf52840.conf  prj_nrf52840dongle_nrf52840.conf
SmartMeter_LG450e_v1_8_0/GuruxDLMS_development/include/: gxmem.h
SmartMeter_LG450e_v1_8_0/GuruxDLMS_development/src/: notify.c
SmartMeter_LG450e_v1_8_0/build_1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  zephyr_modules.txt
SmartMeter_LG450e_v1_8_0/build_1/Kconfig/: Kconfig.shield
SmartMeter_LG450e_v1_8_0/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_prebuilt.cmd  linker_zephyr_prebuilt.cmd.dep  nrf52840dongle_nrf52840.dts.pre.d  nrf52840dongle_nrf52840.dts.pre.tmp  zephyr.dts  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
SmartMeter_LG450e_v1_8_0/build_2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  zephyr_settings.txt
SmartMeter_LG450e_v1_8_0/build_2/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_prebuilt.cmd.dep  nrf52840dk_nrf52840.dts.pre.d  nrf52840dk_nrf52840.dts.pre.tmp  runners.yaml  zephyr.dts  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
SmartMeter_LG450e_v1_8_0/src/: main.c
dlms_test_v1_6_1/: CMakeLists.txt  prj.conf
dlms_test_v1_6_1/dlms/src/: date.c
dlms_test_v1_6_1/src/: main.c
light_Funksteckdose_v1_5_0/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay  prj.conf
light_Funksteckdose_v1_5_0/include/: bm_simple_buttons_and_leds.h
light_Funksteckdose_v1_5_0/src/: bm_blemesh.c  bm_blemesh_model_handler.c  bm_simple_buttons_and_leds.c  main.c
sht3xd_Mesh_Sensor_Server_LPN_Dongle_v1_5_0/: CMakeLists.txt  nrf52840dongle_nrf52840.overlay  prj.conf
sht3xd_Mesh_Sensor_Server_LPN_Dongle_v1_5_0/src/: bm_blemesh_model_handler.c  main.c
(+695 files in other folders)
